Prevent font changes based on mobile orientation

--- a/client/src/app/normalise.less
+++ b/client/src/app/normalise.less
@@ -80,4 +80,5 @@ input:disabled, textarea:disabled, input:disabled::placeholder, textarea:disable
 
 html {
 	font-size: 16px;
+	-webkit-text-size-adjust: 100%;
 }
